added email form

--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -6,7 +6,7 @@ topnav:
     - title: Blog
       url: /blog
     - title: Documentation
-      url: /docs
+      url: /documentation
 #    - title: About
 #      url: /about
 #    - title: GitHub
